// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconDownloadSolid should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-download-solid "
  height={10}
  viewBox="0 0 10 10"
  width={10}
>
  <path
    className="fill-color"
    d="M9.658 4.304H7.143V.634h-3.77v3.67H.857l4.4 4.283 4.4-4.283zM.858 9.81v1.224h8.8V9.81h-8.8z"
    fill="#000000"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconDownloadSolid should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-download-solid test"
  height={150}
  title="title"
  viewBox="0 0 10 10"
  width={160}
>
  <path
    className="fill-color"
    d="M9.658 4.304H7.143V.634h-3.77v3.67H.857l4.4 4.283 4.4-4.283zM.858 9.81v1.224h8.8V9.81h-8.8z"
    fill="123"
  />
</AccessibleSVG>
`;
